fixed layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,8 @@ button:focus {
     flex-direction: row;
     height: 100vh;
     align-items: center;
-    justify-content: space-between; }
+    justify-content: space-between;
+    overflow: hidden; }
     .main .form_container {
       justify-self: start; }
 
@@ -135,7 +136,7 @@ body {
   .front_card-text {
     top: 5px;
     bottom: 0px;
-    left: 1.78rem;
+    left: .75rem;
     color: white; }
     .front_card-text .card-number {
       font-size: 2rem; } }
@@ -166,11 +167,12 @@ body {
   .front_card-text {
     top: 5px;
     bottom: 0px;
-    left: 45px;
+    left: 39px;
     padding: 0; }
     .front_card-text .card-number {
-      font-size: 2.16rem;
-      margin-top: 3rem; } }
+      font-size: 2rem;
+      margin-top: 3rem;
+      padding: 0; } }
 .input-container {
   display: flex;
   flex-direction: column; }
